Fix breakpoint names and remove pre-line of text (whitespace)

--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,6 @@ a {
 .product-text {
   margin-top: 0;
   margin-bottom: 4rem;
-  white-space: pre-line;
   line-height: 1.8 !important;
   font: 1.4rem sans-serif;
   color: hsl(228deg, 12%, 48%);
